<resources>
    <string name="app_name">Mr Farmer Grocer</string>
    <string name="google_maps_key1" templateMergeStrategy="preserve" translatable="false">AIzaSyA8Kiod5dtoN7UtiN4Ie2lpUIer6s6_Y0Y</string>


    <string name="content_description">image</string>
    <string name="title_login">LOGIN</string>
    <string name="et_hint_email_id">Email ID</string>
    <string name="et_hint_password">Password</string>
    <string name="lbl_forgot_password">Forgot Password?</string>
    <string name="btn_lbl_login">Login</string>
    <string name="btn_lbl_logout">Logout</string>
    <string name="btn_lbl_contact">Contact Us</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="register"><u>Register</u></string>
    <string name="remember_me">Remember Me</string>

    <string name="create_an_account">CREATE AN ACCOUNT</string>


    <string name="hint_last_name">Last name</string>
    <string name="hint_first_name">First name</string>
    <string name="et_hint_confirm_password">Confirm Password</string>

    <string name="i_agree_to_the_terms_and_condition">I Agree To The <u> Terms &amp; Conditions </u></string>
    <string name="btn_lbl_register">Register</string>

    <string name="already_have_an_account">Already have an account?</string>
    <string name="login"><u>Login</u></string>

    <string name="err_msg_enter_first_name">Please enter first name.</string>
    <string name="err_msg_enter_last_name">Please enter last name.</string>
    <string name="err_msg_enter_email">Please enter email.</string>
    <string name="err_msg_enter_password">Please enter password.</string>
    <string name="err_msg_enter_confirm_password">Please enter confirm password.</string>
    <string name="err_msg_password_and_confirm_password_mismatch">Password and confirm password does not match.</string>
    <string name="err_msg_agree_terms_and_condition">Please agree terms and condition.</string>

    <string name="please_wait">Please Wait&#8230;</string>

    <string name="title_forgot_password">FORGOT PASSWORD?</string>
    <string name="forgot_password_title_description">Enter your username and e-mail address we\'ll send you a email to reset your password</string>
    <string name="btn_lbl_submit">Submit</string>

    <string name="email_sent_success">\"Email sent successfully to reset your password! \"</string>
    <string name="register_success">You are registered successfully</string>
    <string name="title_complete_profile">COMPLETE PROFILE</string>
    <string name="et_hint_mobile_number">Mobile Number</string>

    <string name="rb_lbl_male">MALE</string>
    <string name="rb_lbl_female">FEMALE</string>
    <string name="btn_lbl_save">Save</string>
    <string name="btn_lbl_address">Address</string>

    <string name="read_storage_permission_denied">Oops, you just denied the permission for storage. You can also allow it from settings.</string>
    <string name="image_selection_failed">Image selection Failed!</string>
    <string name="err_msg_enter_mobile_number">Please enter mobile number.</string>
    <string name="msg_profile_update_success">Your profile is updated successfully.</string>

    <string name="title_home">HOME</string>
    <string name="title_products">PRODUCTS</string>
    <string name="title_orders">ORDERS</string>
    <string name="title_account">ACCOUNT</string>
    <string name="title_settings">ACCOUNT</string>
    <string name="title_activity_mapss">Mapp</string>

    <string name="cart_message">This is cart</string>
    <string name="lbl_edit">Edit</string>
    <string name="lbl_addresses">Addresses</string>


    <string name="please_click_back_again_to_exit">Please click back again to exit.</string>

    <string name="no_products_added_yet">No products added yet</string>

    <string name="title_address_list">ADDRESS</string>
    <string name="no_address_found">No Address Found!</string>
    <string name="lbL_add_address">Add Address</string>

    <string name="title_add_address">ADD ADDRESS</string>
    <string name="hint_full_name">Full name</string>
    <string name="hint_phone_number">Phone number</string>
    <string name="hint_address">Address</string>
    <string name="hint_zip_code">ZipCode</string>
    <string name="hint_additional_note">Additional note</string>
    <string name="hint_other_details">Other details</string>
    <string name="lbl_home">HOME</string>
    <string name="lbl_office">OFFICE</string>
    <string name="lbl_other">OTHER</string>
    <string name="best_selling">Best Selling</string>
    <string name="title_select_address">SELECT ADDRESS</string>

    <string name="title_edit_profile">EDIT PROFILE</string>

    <string name="err_msg_please_enter_full_name">Please enter full name.</string>
    <string name="err_msg_please_enter_phone_number">Please enter phone number.</string>
    <string name="err_msg_please_enter_address">Please enter address.</string>
    <string name="err_msg_please_enter_zip_code">Please enter zip-code.</string>
    <string name="err_msg_please_enter_other_details">Please enter other details.</string>

    <string name="err_your_address_added_successfully">Your address is added successfully.</string>

    <string name="title_edit_address">EDIT ADDRESS</string>
    <string name="btn_lbl_update">UPDATE</string>
    <string name="msg_your_address_updated_successfully">Your address was updated successfully.</string>

    <string name="err_your_address_deleted_successfully">Your address was deleted successfully.</string>

    <string name="cat_vegetables">Vegetables</string>
    <string name="cat_fruits">Fruits</string>
    <string name="cat_seafood">Seafoods</string>
    <string name="cat_chicken">Chicken</string>
    <string name="cat_eggs">Eggs</string>

    <string name="title_product_details">PRODUCT DETAILS</string>
    <string name="lbl_product_description">Product Description</string>
    <string name="lbl_product_details_stock_amount">Stock Amount</string>

    <string name="title_checkout">CHECKOUT</string>
    <string name="checkout_lbl_product_items">Product Items</string>
    <string name="checkout_lbl_selected_address">Selected Address</string>
    <string name="checkout_lbl_items_receipt">Items Receipt</string>
    <string name="lbl_payment_mode">Payment Mode</string>
    <string name="lbl_cash_on_delivery">Cash On Delivery</string>
    <string name="btn_lbl_place_order">PLACE ORDER</string>
    <string name="lbl_subtotal">Subtotal</string>
    <string name="lbl_shipping_charge">Shipping Charge</string>
    <string name="lbl_total_amount">Total Amount</string>
    <string name="lbl_out_of_stock">OUT OF STOCK</string>
    <string name="msg_item_removed_successfully">Item removed successfully.</string>
    <string name="msg_for_available_stock">Available stock is %1$s!. You can not add more than stock quantity.</string>

    <string name="btn_lbl_add_to_cart">ADD TO CART</string>
    <string name="success_message_item_added_to_cart">Product is added to your cart.</string>
    <string name="btn_lbl_go_to_cart">GO TO CART</string>
    <string name="title_my_cart">MY CART</string>
    <string name="no_cart_item_found">No item found in cart!</string>
    <string name="btn_lbl_checkout">Checkout</string>
    <string name="action_cart">My Cart</string>

    <string name="no_orders_placed_yet">No orders placed yet!</string>

    <string name="title_my_order_details">MY ORDER DETAILS</string>
    <string name="order_details_lbl">Order Details</string>
    <string name="order_details_lbl_order_id">Order ID</string>
    <string name="order_details_lbl_order_date">Order Date</string>
    <string name="order_details_lbl_order_status">Order Status</string>
    <string name="order_status_pending">Pending</string>
    <string name="order_details_lbl_shipping_address">Shipping Address</string>

    <string name="order_status_in_process">In Process</string>
    <string name="order_status_delivered">Delivered</string>

    <string name="lbl_location">Location</string>
</resources>