<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorOffWhite"
    tools:context=".ui.activities.ProductsActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_activity_products"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@drawable/app_gradient_color_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
    </androidx.appcompat.widget.Toolbar>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_my_product_items"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        android:layout_marginTop="100dp"
        android:layout_marginBottom="55dp"
        app:layout_constraintBottom_toTopOf="@+id/bottom_nav"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_no_products_found"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/no_products_added_yet"
        android:textAlignment="center"
        android:textSize="@dimen/no_data_found_textSize"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:gravity="center_horizontal" />

    <include
        android:id="@+id/bottom_nav"
        layout="@layout/bottom_nav_view"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:layout_editor_absoluteX="0dp" />

    <FrameLayout
        android:id="@+id/fl_wrapper"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <!--
        <SearchView
            android:id="@+id/searchView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:iconifiedByDefault="false"
            android:queryHint="Search Here"/>

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="62dp"
            android:layout_height="44dp"
            android:layout_gravity="end"
            android:layout_marginTop="@dimen/cart_image_margin"
            android:adjustViewBounds="true"
            android:clickable="true"
            android:paddingRight="@dimen/cart_image_margin"
            app:srcCompat="@drawable/ic_vector_cart"
            tools:ignore="VectorDrawableCompat" /> -->



        <com.google.android.material.tabs.TabLayout
            android:id="@+id/category_tab_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:tabMode="scrollable"
            android:layout_marginTop="55dp">

            <com.google.android.material.tabs.TabItem
                android:id="@+id/vegetables_tab"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cat_vegetables" />

            <com.google.android.material.tabs.TabItem
                android:id="@+id/fruits_tab"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cat_fruits" />

            <com.google.android.material.tabs.TabItem
                android:id="@+id/seafoods_tab"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cat_seafood" />

            <com.google.android.material.tabs.TabItem
                android:id="@+id/chicken_tab"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cat_chicken" />

            <com.google.android.material.tabs.TabItem
                android:id="@+id/eggs_tab"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cat_eggs" />
        </com.google.android.material.tabs.TabLayout>

    </FrameLayout>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="62dp"
        android:layout_height="44dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:adjustViewBounds="true"
        android:clickable="true"
        android:paddingRight="@dimen/cart_image_margin"
        app:layout_constraintBottom_toBottomOf="@+id/toolbar_activity_products"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/toolbar_activity_products"
        app:srcCompat="@drawable/ic_vector_cart"
        tools:ignore="VectorDrawableCompat" />

    <SearchView
        android:id="@+id/searchView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="6dp"
        android:iconifiedByDefault="false"
        android:queryHint="Search"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />



</androidx.constraintlayout.widget.ConstraintLayout>